modules/base/styles/ext.cx.base.less
@import "grid/agora-grid";

@gray-darker: #252525;
@gray-dark: #565656;
@gray: #C9C9C9;
@gray-light: #f0f0f0;
@gray-lighter: #fbfbfb;

h2 {
	color: @gray-darker;
}

/**
 * Container for the translation widget
 */
.cx-widget {
	.mw-ui-grid;
	color: @gray-darker;
}

.cx-widget__header {
	.mw-ui-item;
	.mw-ui-one-whole;
	.mw-ui-palm-one-whole;
}

.cx-column__language-label {
	color: @gray-dark;
}

.cx-column {
	.mw-ui-item;
	.mw-ui-one-third;
}

.cx-column--source,
.cx-column--translation {
	.mw-ui-palm-one-half;
}

.cx-column--tools {
	.mw-ui-palm-one-whole;
	background: #f0f0f0;
}

/* Unused? */
.suggestion-list {
	.mw-ui-grid;
}

.suggestion {
	.mw-ui-item;
	background: white;
	border: 1px solid #cccccc;
	padding: 10px;
	margin: 2px 0;
	.mw-ui-palm-one-half;
}

